fixed overflow

--- a/src/scss/components/banner.scss
+++ b/src/scss/components/banner.scss
@@ -7,6 +7,7 @@
   .banner-img {
     animation: banner-img 1.2s cubic-bezier(0.7, 0, 0.84, 0) 0.5s 1 normal none;
     width: 800px;
+    overflow: hidden;
     @include tablet {
       width: 700px;
     }
